crosshair/examples/icontract/bugs_detected/wrong_sign.out
<examples dir>\icontract\bugs_detected\wrong_sign.py:4: error: false when calling some_func(x = 1000) (which returns 0)
